--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.12.3",
+    "@material-ui/data-grid": "^4.0.0-alpha.37",
     "@supabase/supabase-js": "^1.22.3",
     "next": "11.1.0",
     "react": "17.0.2",
