--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/data-grid": "^4.0.0-alpha.37",
     "@supabase/supabase-js": "^1.22.3",
+    "countries-list": "^2.6.1",
+    "country-list-js": "^3.1.7",
     "next": "11.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "styled-components": "^5.3.1"
   },
   "devDependencies": {
     "eslint": "7.32.0",
